Mon Mar 04 13:04:23 2005  Gan Deng  <gan.deng@vanderbilt.edu>

	* Config_Handlers/Config_Handlers.mpc
	* Config_Handlers/Deployment.hpp
	* Config_Handlers/test.cpp

	  Fixed compilation errors and linking erros and warnings
	  for the XSC basec config handlers and test.

Fri Mar  4 11:13:23 2005  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ciao/Container_Impl.cpp:
	* ciao/Container_Impl.h:
	* ciao/NodeApplication_Impl.cpp:
	* ciao/NodeApplication_Impl.h: Fixed mismatched throw spec decls
	  caused by IDL changes.

Thu Mar  3 13:15:02 2005  Will Otte <wotte@dre.vanderbilt.edu>
	
	* Config_Handlers/DnC_Dump.h
	* Config_Handlers/DnC_Dump_T.cpp
	* Config_Handlers/Dump_Obj.h
	* Config_Handlers/Config_Handlers.mpc

	Checked these files into the xsc_handler_1 branch, with a few changes.
	
Mon Mar 03 01:45:23 2005  Gan Deng  <gan.deng@vanderbilt.edu>

	* examples/BasicSP/BMDisplay/BMDisplay.idl
	* examples/BasicSP/descriptors/HUDisplay.cid
	* examples/BasicSP/descriptors/NavDisplay.ccd

	  Added a multiplex receptacle to the BMDisplay component. 
	  This is a place holder to test "users multipe" feature. 
	  Modified descriptors to reflect this change as well. 

Tue Mar 01 01:26:03 2005  Gan Deng <dengg@dre.vanderbilt.edu>

	* ciao/Deployment_Core.idl

	  Deleted a useless type definition.

	* tests/NodeApplicationTest/NodeApp_test_client_ex.cpp
	* tests/NodeApplicationTest/NodeApp_test_client_simple.cpp

	  Fixed compilation errors. Now both these two tests runs fine.

Tue Mar 01 12:20:21 2005  Gan Deng <dengg@dre.vanderbilt.edu>

	* DomainApplicationManager/DomainApplicationManager_Impl.cpp
	* examples/BasicSP/BMClosedED/BMClosedED_exec.cpp

	  Fixed missing headers.

Wed Mar  2 16:55:29 2005  Will Otte <wotte@dre.vanderbilt.edu>
	
	* Config_Handlers.mpc
	* DP_Handler.cpp

	Fixed an error where the IDREF singleton was still trying to
	be compiled.

Tue Mar 01 23:54:21 2005  Gan Deng <dengg@dre.vanderbilt.edu>

	* DomainApplicationManager/DomainApplicationManager_Impl.cpp