@@ -422,7 +422,7 @@ namespace CIAO
      Dynamic_Component_Servant_Base*
      ACE_ENV_ARG_DECL)
   {
-    ACE_THROW_RETURN (CORBA::NO_IMPLEMENT (), 0);
+    ACE_THROW(CORBA::NO_IMPLEMENT ());
   }
 
   void
@@ -430,7 +430,7 @@ namespace CIAO
                                        ACE_ENV_ARG_DECL)
     ACE_THROW_SPEC ((CORBA::SystemException))
   {
-    ACE_THROW_RETURN (CORBA::NO_IMPLEMENT (), 0);
+    ACE_THROW (CORBA::NO_IMPLEMENT ());
   }
 
   void
@@ -438,7 +438,7 @@ namespace CIAO
     (PortableServer::ObjectId &
      ACE_ENV_ARG_DECL)
   {
-    ACE_THROW_RETURN (CORBA::NO_IMPLEMENT (), 0);
+    ACE_THROW (CORBA::NO_IMPLEMENT ());
   }
 
   CORBA::Object_ptr
